# forexpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
forexpy/src/: decompressor.py  fetch.py  info.py  utils.py
forexpy/src/sources/: dukascopy.py  histdata.py  metatrader_5.py
forexpy/tests/: conftest.py  test_dukas.py  test_hist.py  test_inputs.py  test_metatrader.py
