[tool.poetry]
name = "forexpy"
version = "0.1.0"
description = "The package can be used to get Forex data from Dukascopy and MetaTrader5 brokers."
authors = ["Info Zetra <info@zetra.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
metatrader5 = "^5.0.45"
pytest = "^7.3.1"
pandas = "^2.0.1"
click = "^8.1.3"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
